# memo-capture

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  handoff.md  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
apps/api/: package.json  tsconfig.json
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/worker/: package.json  tsconfig.json
docs/: architecture.md  completed-tasks.md  development.md  env.md  memo-capture-synopsis.md  schema-baseline.md
docs/design/: Photo-ingestion-plan.md  memo-capture-0.1.0-state-specification-report.md  memo-capture-0.1.0-state-specification.json  memo-capture-0.2.0-workflow-definition-bundled.json  memo-capture-0.2.1-workflow-definition-bundled.json  memo-capture-0.2.2-workflow-definition-bundled.json  memo-capture-0.2.3-workflow-definition-bundled.json  memo-capture-0.2.4-workflow-definition-bundled.json  memo-capture-0.2.5-workflow-definition-bundled.json  memo-capture-concept.txt  memo-capture-design-learnings.md
docs/plans/: 00 Workflow Definition Enforcement Hardening.md  01 Ephemeral AI Review Modals And Prompt Schema Defaults.md  02 Photo Intake And Memo Creation Plan.md  03 Work Item Photo Indicators And Viewer Modal.md  05 Invoke Providers Runtime Alignment Plan.md  (+10 more)
scripts/: applauncher-dev.mjs  applauncher-native-dev.mjs  applauncher-native-dev.sh  doctor.mjs  prepare-postgres-test-db.mjs
(+127 files in other folders)
