[package]
name = "memo-capture-desktop"
version = "1.0.0"
description = "Memo Capture desktop shell"
authors = ["Paul Marshall"]
edition = "2021"

[lib]
name = "memo_capture_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-opener = "2.2.7"
rfd = "0.15.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
